apps/manyfold/Manyfold.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manyfold
  labels:
    app: manyfold
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manyfold
  template:
    metadata:
      labels:
        app: manyfold
        name: manyfold
    spec:
      containers:
      - name: manyfold
        image: lscr.io/linuxserver/manyfold:latest
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: manyfold-models
          mountPath: "/libraries/models"
      volumes:
      - name: manyfold-models
        persistentVolumeClaim:
          claimName: manyfold-models
