apps/manyfold/StatefuleSet-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /var/lib/redisql/data
              name: redis
              subPath: data
  volumeClaimTemplates:
  - metadata:
      name: redis
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn-2-replicas 
      resources:
        requests:
          storage: 2Gi
      volumeMode: Filesystem
