apps/manyfold/svc-manyfold.yml
---
apiVersion: v1
kind: Service
metadata:
  name: manyfold
spec:
  selector:
    app: manyfold
  type: ClusterIP
  ports:
    - port: 3214
      targetPort: 3214
      name: manyfold
