apps/manyfold/IngressRoute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manyfold
  labels:
    app.kubernetes.io/instance: manyfold
spec:
  ingressClassName: traefik
  rules:
  - host: manyfold.camsab.me
    http:
      paths:
      - backend:
          service:
            name: manyfold
            port:
              name: manyfold
        path: /
        pathType: Prefix
